# VideoLearning

./: .gitignore  CMakeLists.txt  MemAlign.cpp  PlayVideo1.cpp  PlayVideo2.cpp  PlayVideo3.cpp  PlayVideoVoice.cpp  PointerTest.cpp  QueueTest.cpp  SDLEvent.cpp  SDLPlayer.cpp  StringUtils.cpp  StringUtils.h  Video2YUV.cpp  ffmpeg_learning_1.cpp  main.cpp  simplest_ffmpeg_audio_player.cpp  simplest_ffmpeg_player_su.cpp  simplest_ffmpeg_player_su2.cpp  simplest_video_play_sdl2_basic.cpp  simplest_yuv444_split.cpp  size_t_test.cpp  test.cpp  tips.txt  union_test.cpp  variable_test.cpp  yuv420_transfer.cpp
tips/: AVFrame分析.md  LearningIssu.md
tutorial/: Tutorial01.cpp  Tutorial02.cpp  Tutorial04.cpp
